@@ -158,10 +158,10 @@ for dns in 1 0; do
 	check_source_selection && test_fail
 	check_sync && test_fail
 
-	check_file_messages "	2	1	.*	4460	" 50 100 log.packets || test_fail
+	check_file_messages "	2	1	.*	4460	" 45 100 log.packets || test_fail
 	check_file_messages "	2	2	.*	4460	" 0 0 log.packets || test_fail
 	check_log_messages "Source 192.168.123.1 changed to 192.168.123.2" 4 10 || test_fail
-	check_log_messages "Source 192.168.123.2 replaced with 192.168.123.1" 4 10 || test_fail
+	check_log_messages "Source 192.168.123.2 replaced with 192.168.123.1" 3 10 || test_fail
 
 	servers=2
 
@@ -225,6 +225,8 @@ for dns in 1 0; do
 	check_file_messages "	3	2	.*	4460	" 0 0 log.packets || test_fail
 done
 
+min_sync_time=$[default_min_sync_time + 200]
+max_sync_time=600
 server_conf="
 ntsserverkey tmp/server1.key
 ntsservercert tmp/server1.crt
@@ -248,6 +250,8 @@ check_file_messages "	3	2	.*	123	" 0 0 log.packets || test_fail
 check_file_messages "	3	2	.*	11123	" 3 3 log.packets || test_fail
 
 dns=1
+min_sync_time=$default_min_sync_time
+max_sync_time=400
 server_conf="
 ntsserverkey tmp/server1.key
 ntsservercert tmp/server1.crt
